@@ -1,5 +1,5 @@
 ================================================================================
-    qCharDev    |   version 0.90    |   GPL v3              |   2018-05-08
+    qCharDev    |   version 0.91    |   GPL v3              |   2018-05-10
     James Hendrie                   |   hendrie dot james at gmail dot com
 ================================================================================
 
