@@ -1,1 +1,3 @@
 2018-05-08      0.90    Initial release
+
+2018-05-10      0.91    Added support for images (<type>image</type>)
